--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "emphasoft-authentication",
+  "name": "emphasoft",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "homepage": "http://gilespi.github.io/emphasoft"
   },
   "dependencies": {
     "axios": "^0.21.0",
